fix: remove unknown linux aarch64 module