@@ -67,7 +67,6 @@ jlink \
   --add-modules jdk.charsets \
   --add-modules jdk.crypto.cryptoki \
   --add-modules jdk.crypto.ec \
-  --add-modules jdk.crypto.mscapi \
   --add-modules jdk.dynalink \
   --add-modules jdk.httpserver \
   --add-modules jdk.internal.ed \
